# BAPnP_Solver

./: BAPnP.m  CMakeLists.txt  MyBAPnP.kdev4  README.md  bapnp.cpp  compare_condition_numbers.m  cpnp.cpp  exp1.m  generate_P6P_3D_to_2D_point_correspondences_noise.m  main.cpp  main_benchmark.cpp  main_colmap_benchmark.cpp  main_tum.cpp  plot_time.m  pnp_linear_only.m  result  result.txt  run_aqpnp.m  run_aspnp.m  run_ceppnp.m  run_comparison_experiment.m  run_cpnp.m  run_dls_pnp.m  run_epnp.m  run_epnp_guass.m  run_lhm.m  run_mlpnp.m  run_opnp.m  run_ppnp.m  run_reppnp.m  run_rpnp.m  run_srpnp.m  test_pnp_condition_number.m  test_pnp_planarity_performance.m  xiaorong1.m
.kdev4/: MyBAPnP.kdev4
include/: bapnp.h  epnp.cpp  epnp.h
simulations/: Ablation1.m  Ablation2.m  BAPnP.m  BAPnP_Coplanar.m  BAPnP_new.m  Tetrahedron.m  compare_condition_numbers.m  exp1.m  exp2.m  generate_P6P_3D_to_2D_point_correspondences_noise.m  plot_time.m  pnp_linear_only.m  run_aqpnp.m  run_aspnp.m  run_ceppnp.m  run_comparison_experiment.m  run_cpnp.m  run_dls_pnp.m  run_epnp.m  run_epnp_guass.m  run_epnp_with_cpts.m  run_lhm.m  run_mlpnp.m  run_opnp.m  run_ppnp.m  run_reppnp.m  run_rpnp.m  run_srpnp.m  sqpnp.m  test_pnp_condition_number.m  test_pnp_planarity_performance.m  test_spectral_gap_comparison  test_spectral_gap_comparison.m  xiaorong1.m
south-building/: cameras.txt
src/: bapnp.cpp
